--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-04-18 13:54:54 -0400 
+%% Created for Nils Peters at 2009-04-20 15:22:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{BorssAES35,
+	Address = {London, UK},
+	Author = {C. Bor{\ss} and R. Martin},
+	Booktitle = {AES 35th Int. Conference},
+	Date-Added = {2009-04-20 15:22:03 -0400},
+	Date-Modified = {2009-04-20 15:22:03 -0400},
+	Title = {An Improved Parametric Model for Perception-Based Design of Virtual Acoustics},
+	Year = {2009}}
+
+@manual{openAL-spec1.1,
+	Author = {Garin Hiebert},
+	Date-Added = {2009-04-20 15:12:29 -0400},
+	Date-Modified = {2009-04-20 15:12:29 -0400},
+	Title = {{OpenAL 1.1 Specification and Reference}},
+	Year = {2005}}
 
 @article{wright1997osc,
 	Author = {Wright, M. and Freed, A.},
