proof-reading and tightening up the language for the beginning of the paper
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5057 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -71,7 +71,7 @@
 \permission
 
 \begin{abstract}  
-We propose a multi-layer approach to mediate across essential components involved in sound spatialization. This approach will facilitate the artistic work with spatialization systems which currently lacks of structure, flexibility, and interoperability. 
+We propose a multi-layer approach to mediate across essential components involved in sound spatialization. This approach will facilitate artistic work with spatialization systems, a process which currently lacks structure, flexibility, and interoperability. 
 \\                            	
 \textbf{Keywords:} sound spatialization, interoperability, layered architecture, adaptation, site-specific, Ambisonics , TODO: make better \& stronger keywords   
 %-flexible working environment for spatialization\\
@@ -83,18 +83,18 @@ We propose a multi-layer approach to mediate across essential components involve
 \end{abstract}
 
 \section{Introduction}\label{sec:introduction}         
-The improvements in computer and audio equipment in recent years makes it possible to experiment more freely with resource-demanding sound synthesis techniques such as spatialization. (NOTE : is spatialization a "sound synthesis technique" ? Not sure... [PB] - I think it is a special case -- because you synthesize the sound around a sound, another (closer) name for it is ``spatial sound synthesis" [NP]) For seeking new means of expression different spatialization applications should be easily combined and accessible for both programmatic and user interfaces. % and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
+The improvements in computer and audio equipment in recent years make it possible to experiment more freely with resource-demanding sound synthesis techniques such as spatialization. (NOTE : is spatialization a ``sound synthesis technique'' ? Not sure... [PB] - I think it is a special case -- because you synthesize the sound around a sound, another (closer) name for it is ``spatial sound synthesis" [NP]) For seeking new means of expression, different spatialization applications should be readily combined and accessible for both programmatic and user interfaces. % and/or other controllers. %e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. 
 Furthermore, 
 %The goal of any spatialization
 %rendering is it only the rendering system, or control/rendering ?
 %system is to facilitate or empower the creative use of the spatial medium for a sonic artist. 
-quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in the compositional use of spatialization and that there is not any spatialization system that could satisfy every artists. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
+quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in the compositional use of spatialization and that there is no one spatialization system that could satisfy every artist. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
 For instance, the requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02}%TODO: find a Robert Normandeau reference
 ), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
-One example is an interactive art installation where the real-time quality of a spatial rendering system is of great importance in combination with the possibility to control spatial processes through a multi-touch screen.  Juxtaposed is a second example: a performance of a fixed-media composition where the paramount features may be multichannel playback and the compensation of non-equidistant loudspeakers (in terms of sound pressure and time delays). Additional scenarios may require binaural rendering for headphone listening, multichannel recording, up and down mixing, or a visual representation of a sound scene.  
+One example is an interactive art installation where the real-time quality of a spatial rendering system is of great importance, in combination with the possibility to control spatial processes through a multi-touch screen.  Juxtaposed is a second example: a performance of a fixed-media composition where the paramount features may be multichannel playback and the compensation of non-equidistant loudspeakers (in terms of sound pressure and time delays). Additional scenarios may require binaural rendering for headphone listening, multichannel recording, up and down mixing, or a visual representation of a sound scene.  
 Moreover, even during the creation of one spatial art work, the importance of these requirements may change throughout different stages of the creative processes. % \emph{Experimentation -- Arranging -- Performance -- Documentation}. 
 %Several common paradigms for spatial sound synthesis are outlined in section \ref{sec:review}. %The availability of better CPU resources in recent years makes it possible to experiment more freely with these paradigms for seeking new ways of expressions, e.g. a generative mapping of a granular synth output to different spatial renderer from one common user interface, while also streaming spatial encoded audio to the internet. This paper shows how such complex spatialization scenarios can be conceptualized through a multi-layer structure.    
-Therefore, guaranteeing efficient workflow for sound spatialization requires structure, flexibility, and interoperability across all involved components. As outlined in section \ref{sec:review}   common spatialization systems are too often self-contained giving no consideration to these requirements. Therefore, we propose a multi-layer approach to mediate sound spatialization to meet these demands. 
+Guaranteeing efficient workflow for sound spatialization requires structure, flexibility, and interoperability across all involved components. As outlined in section \ref{sec:review} common spatialization systems are too often self-contained, giving no consideration to these requirements. Therefore, we propose a multi-layer approach to mediate sound spatialization to meet these demands. 
 
 
 %\begin{packed_item} 
