--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -166,12 +166,12 @@ Guaranteeing efficient workflow for sound spatialization requires structure, fle
 Currently, many composers and sound designers use DAWs for designing their sound spatialization primarily in the context of fixed media, tape-music, and consumer media production. Users of DAWs often have former experience with live diffusion systems, or with panning in a hardware mixing console. Their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
 A number of (mainly commercial) DAWs are mature and offer a systematic user interface, good project and sound file management, and extendability through plug-ins.  They can fulfill the needs of many users in the described context.\\
 However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener is the most common multichannel format. % in DAWs and in surround panning plugins. 
-Its artistic use may be limited because 5.1 favors the frontal direction and has reduced capabilities for localizing virtual sources from the sides and back.  More recently, extensions to 7.1 or 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
+Its artistic use may be limited because 5.1 favors the frontal direction and has reduced capabilities for localizing virtual sources from the sides and back.  More recently, extensions up to 10.2 are available\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
 Also, in art installations or concert hall environments, non-standard loudspeaker setups are common, varying in number and arrangements of loudspeakers.  These configurations are typically unaccounted by existing DAWs and therefore often difficult to use. 
 %From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. It was not until the late nineties that new suggestions for surround workstations (from 6.1 to 10.2, enhancing sides precision, and perception outside of the Central Listening Position) were considered.\\
 %This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
-\\Another critical function for surround sound mixing is the means by which a sound source's energy is distributed amongst the loudspeakers. A \emph{blur} parameter, which determines the apparent source width of a panned signal, should be a standard control element of every surround panner because it enables many variations and possibilities for a creative mix. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
-In most applications, this factor is restricted and linked to the sound source's position relative to the center in the surround panner, and is related to parameters such as \emph{spread} or \emph{diversity} (e.g. in Apple Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). To the authors' opinion, the most flexible control element can be found in Sequoia \footnote{\url{http://www.magix.com/us/sequoia/}}, with \emph{soundfield} offset and character (shape) settings for each track, a \emph{global divergence} to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. 
+\\An expressive element in surround panners is a parameter often named \emph{blur}, \emph{divergence}, or \emph{spread} and controls the apparent source width through modifying the distributed the sound energy amongst loudspeakers. Although this parameter enriches the creative possibilities, it is not always integrated in DAWs. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
+Moreover, this parameter is often only indirectly controllable, e.g. through the distance of the sound source to the surround panner's center (Apple Logic Pro).%, and is related to parameters such as \emph{spread} or \emph{diversity} (e.g. in Apple's Logic Pro). To the authors' opinion, the most flexible control element can be found in Sequoia \footnote{\url{http://www.magix.com/us/sequoia/}}, with \emph{soundfield} offset and character (shape) settings for each track, a \emph{global divergence} to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. 
 %
 %
 % Did we discuss all point below:? (moved above -> we should use them at the beginning IMHO)
