--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,17 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-04-21 12:43:39 +0200 
+%% Created for lossius at 2009-04-21 13:19:47 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@phdthesis{Wiggins:2004PhDThesis,
+@article{Pulkki2007dirac_1,
+	Author = {Pulkki, V.},
+	Date-Added = {2009-04-21 13:06:35 +0200},
+	Date-Modified = {2009-04-21 13:07:29 +0200},
+	Journal = {Journal of the Acoustic Engineering Society},
+	Keywords = {spatialisation, vbap, DirAC},
+	Month = {June},
+	Number = {6},
+	Pages = {503-516},
+	Title = {Spatial Sound Reproduction with Directional Audio Coding},
+	Volume = {55},
+	Year = {2007}}
+
+@phdthesis{Wiggins2004PhDThesis,
 	Author = {Wiggins, Bruce},
 	Date-Added = {2009-04-21 12:42:49 +0200},
-	Date-Modified = {2009-04-21 12:43:39 +0200},
+	Date-Modified = {2009-04-21 12:58:33 +0200},
 	Keywords = {spatialisation, ambisonics},
 	School = {University of Derby, Derby, UK.},
 	Title = {An investigation into the real-time manipulation and control of three-dimensional sound fields},
