Including the Hardware Abstraction layer in the graph, and renaming the layer in the text file
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5065 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -256,7 +256,7 @@ Each OSI-layer contains a collection of conceptually similar functionalities tha
 \subsubsection{Physical Device Layer}
 The major functionality of the Physical Device Layer is to establish the physical relationship between computer and listener.                                                       
 It defines the electrical and physical specifications of devices that creates the acoustical signals, such as soundcards, amplifiers, loudspeakers, and headphones.
-\subsubsection{Stystem-Level Services Layer}
+\subsubsection{Hardware Abstraction Layer}
 This layer contains the audio services that runs in the background of a computer OS and manages multichannel audio data between the physical devices and higher layers. Examples are Core Audio, ALSA, or PortAudio. 
 Extensions such as JACK, Soundflower, Rewire and networked audio streaming can be used for more complex distributions of audio signals among different audio clients.
 \subsubsection{Encoding and Decoding Layers}	
